--- a/StudentManagement/src/main/resources/templates/index.html
+++ b/StudentManagement/src/main/resources/templates/index.html
@@ -6,11 +6,11 @@
 	</head>
 	<body>
 		<h1>CloudByteのプロジェクト<br><small>ユーザーログイン画面</small></h1><br>
-		<form action="userLogin" get="post">
+		<form action="userLogin" method="post">
 			<label for="username">ユーザーID:</label><br>
 			<input type="text" id="username" name="username" placeholder="ユーザーID"><br>
 			<label for="password">パスワード:</label><br>
-			<input type="text" id="password" name="password" placeholder="パスワード"><br>
+			<input type="password" id="password" name="password" placeholder="パスワード"><br>
 			<input type="checkbox" id="remember" name="remember">
 			<label for="remember">ログイン状態を保存する</label>
 	        <a href="register" >新規登録</a><br>
