--- a/StudentManagement/src/main/resources/templates/Index.html
+++ b/StudentManagement/src/main/resources/templates/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
@@ -10,6 +10,7 @@
 			<small>ユーザーログイン画面</small>
 		</h1>
 		<div>ログイン</div>
+		<h2 th:text="${errorMsg}"></h2>
 		<form action="userLogin" method="post">
 			<label for="username" class="form-label">ユーザーID：</label><br>
 			<input type="text" id="username" placeholder="ユーザーID" name="username"><br>
