--- a/StudentManagement/src/main/resources/templates/index.html
+++ b/StudentManagement/src/main/resources/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<title>登录页面</title>
 	</head>
 	<body>
 		<h1>CloudByteのプロジェクト<br><small>ユーザーログイン画面</small></h1><br>
+		<h2 th:text="${errorMsg}"></h2>
 		<form action="userLogin" method="post">
 			<label for="username">ユーザーID:</label><br>
 			<input type="text" id="username" name="username" placeholder="ユーザーID"><br>
