--- a/StudentManagement/src/main/resources/templates/user/edit.html
+++ b/StudentManagement/src/main/resources/templates/user/edit.html
@@ -7,7 +7,7 @@
 	<body>
 		<h4>ユーザー変更画面</h4>
 		<p th:text="${errorMsg}">
-		<form action="userRegister" method="post">
+		<form action="userEdit" method="post">
 			<label for="username">ユーザーID</label>
 			<input type="text" id="username" name="username" th:value="${User.username}" placeholder="ユーザーID" >
 			<br>
@@ -38,4 +38,5 @@
 			<input type="button" value="キャンセル" onclick="history.back()">
 		</form>
 	</body>
+
 </html>
