--- a/StudentManagement/src/main/resources/templates/user/search.html
+++ b/StudentManagement/src/main/resources/templates/user/search.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>StudentManagement一览页面</title>
+		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	</head>
 	<body>
 		<form action="searchByCondition" method="get">
@@ -23,7 +24,7 @@
 			<br>
 			<input type="submit" value="検索">
 		</form>
-		<table border="1">
+		<table border="1" >
 			<thead>
 				<tr>
 					<th>選択</th>
@@ -40,7 +41,7 @@
 			<tbody>
 				<tr th:each="user,item:${allData}">
 					<td>
-						<input type="checkbox">
+						<input type="checkbox" name="checkboxAll">
 					</td>
 					<td th:text="${item.index+1}"></td>
                     <td th:text="${user.username}"></td>
@@ -55,10 +56,21 @@
 					</td>
                 </tr>
 			</tbody>
-			
-				
 		</table>
-		<input type="button" value="新規登録">
-		<input type="button" value="一括削除">
+		<input type="button" value="新規登録" onclick="window.location.href = 'registerFromSearch'">
+		<input type="button" value="一括削除" onclick="deleteAllChecked()" >
 	</body>
+	
+	<script type="text/javascript">
+		function deleteAllChecked(){
+				var nameArr = [];
+				var data = document.getElementsByName("checkboxAll");
+				data.forEach(function (item,index){
+					if(item.checked){
+						nameArr.push(item.parentNode.parentNode.children[2].innerHTML);
+					}
+				})
+				console.log(nameArr);
+		}
+	</script>
 </html>
