--- a/StudentManagement/src/main/resources/templates/user/edit.html
+++ b/StudentManagement/src/main/resources/templates/user/edit.html
@@ -12,50 +12,51 @@
 			<p th:text="${errorMsg}">
 		</div>
 		<div>
-			<form action="userRegister" method="post">
+			<form action="userEdit" method="post">
+			
 			<table>
 				<tr>
-					<td>ユーザーID</td>
-					<td><input type="text" placeholder="ユーザーID" name="username"></td>
+					<td><label for="username">ユーザーID</label></td>
+					<td><input type="text" id="username" name="username" th:value="${user.username}" readonly></td>
 				</tr>
 				<tr style="height: 20px"></tr>
 				<tr>
-					<td>パスワード</td>
-					<td><input type="password" placeholder="パスワード" name="password"></td>
+					<td><label for="password">パスワード</label></td>
+					<td><input type="password" id="password" th:value="${user.password}" name="password"></td>
 				</tr>
 				<tr style="height: 20px"></tr>
 				<tr>
 					<td>性別</td>
 					<td>
 						<label for="gender">
-							男<input type="radio" name="gender" value="0" id="gender">
+							男<input type="radio" name="gender" th:field="${user.gender}" th:value="0" id="gender">
 						</label>
 						<label for="gender1">
-							女<input type="radio" name="gender" value="1" id="gender1" checked>
+							女<input type="radio" name="gender" th:field="${user.gender}" th:value="1" id="gender1">
 						</label>
 					</td>
 				</tr>
 				<tr style="height: 20px"></tr>
 				<tr>
-					<td>住所</td>
-					<td><input type="text" placeholder="住所" name="address"></td>
+					<td><label for="address">住所</label></td>
+					<td><input type="text" th:value="${user.address}" id="address" name="address"></td>
 				</tr>
 				<tr style="height: 20px"></tr>
 				<tr>
-					<td>国籍</td>
+					<td><label for="country">国籍</label></td>
 					<td>
-						<select name="country">
-							<option value="0">中国</option>
-							<option value="1">日本</option>
-							<option value="2">其他</option>
+						<select name="country" id="country">
+							<option th:field="${user.country}" th:value="0">中国</option>
+							<option th:field="${user.country}" th:value="1">日本</option>
+							<option th:field="${user.country}" th:value="2">其他</option>
 						</select>
 					</td>
 				</tr>
 				<tr style="height: 20px"></tr>
 				<tr>
-					<td>備考</td>
+					<td><label for="comment">備考</label></td>
 					<td>
-						<input type="text" placeholder="備考" name="comment">
+						<input type="text" th:value="${user.comment}" id="comment" name="comment">
 					</td>
 				</tr>
 			</table>
